--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "14.1.3",
     "pino-pretty": "^10.3.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@types/node": "^20",
